# libpinch

./: .gitignore  CMakeLists.txt  Config.cmake.in  GNUmakefile  GNUmakefile.in  README.md  assh-test.prj  changelog  configure  configure.ac  libpinch.pc.in  todo.txt
assh/: channel.hpp  config.hpp  connection.hpp  connection_pool.hpp  debug.hpp  error.hpp  hash.hpp  http_proxy.hpp  key_exchange.hpp  packet.hpp  port_forwarding.hpp  proxy_cmd.hpp  sftp_channel.cpp  sftp_channel.hpp  ssh_agent.hpp  terminal_channel.hpp  x11_channel.hpp
assh/detail/: ssh_agent_impl.hpp
cmake/: asio-boost.hpp.in  asio.hpp.in  pinch-config.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  Jamfile.v2  conf.py  conf.py.in  index.rst  introduction.qbk  lib.qbk  libpinch-doc.qbk  libpinch.3  logo.xcf
doc/css/: pinch.css
examples/: CMakeLists.txt  GNUmakefile.in  example-1.cpp
include/: pinch.hpp
include/assh/: channel.hpp  config.hpp  connection.hpp  connection_pool.hpp  crypto-engine.hpp  debug.hpp  key_exchange.hpp  packet.hpp  port_forwarding.hpp  proxy_cmd.hpp  sftp_channel.hpp  ssh_agent.hpp  terminal_channel.hpp  x11_channel.hpp
include/pinch/: asio.hpp  channel.hpp  connection.hpp  connection_pool.hpp  crypto-engine.hpp  debug.hpp  destination.hpp  digest.hpp  error.hpp  key_exchange.hpp  known_hosts.hpp  operations.hpp  packet.hpp  pinch.hpp  port_forwarding.hpp  proxy_cmd.hpp  sftp_channel.hpp  ssh_agent.hpp  ssh_agent_channel.hpp  terminal_channel.hpp  types.hpp  x11_channel.hpp
include/pinch/detail/: handshake.ipp  ssh_agent_impl.hpp
src/: channel.cpp  connection.cpp  connection.inl  connection_pool.cpp  crypto-engine.cpp  debug.cpp  digest.cpp  error.cpp  http_proxy.cpp  key_exchange.cpp  known_hosts.cpp  packet.cpp  port_forwarding.cpp  posix_ssh_agent_impl.cpp  proxy_cmd.cpp  sftp_channel.cpp  ssh_agent.cpp  terminal_channel.cpp  test-assh.cpp  win_ssh_agent_impl.cpp  x11_channel.cpp
test/: CMakeLists.txt  coro-test.cpp  service-test.cpp  sftp-test.cpp  unit-test.cpp
